# ScholAR-Backend

./: .env.example  .gitignore  Dockerfile  NERODIVINE_API.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/v1/: __init__.py
app/controllers/: google_auth_controller.py
app/core/: email_config.py  log.py  logger.py  settings.py  smtp_config.py  toys_config.py
app/db/: database.py
app/infra/cache/: otp_store.py
app/infra/email/: sender.py
app/llm/: base.py  providers.py
app/llm/gemini/: live.py
app/models/: __init__.py  audio.py  authenticated_device.py  device.py  google_user.py  hardware.py  language.py  persona.py  story.py  theme.py  user.py
app/schemas/: device_auth.py  forgot_password.py  google_user.py  messages.py  resend_code.py  stories.py  token_refresh.py  user.py  verify_code.py
app/services/: audio_ws_service.py  auth.py  google_auth.py
app/utils/: otp_utils.py  validators.py
app/websocket/: audio_ws.py  base.py  connection.py  nerodivine_routes.py  realtime.py  router.py  routes.py  routes.py.backup
docs/: AuthenticationDoc.md  BACKEND_ANALYSIS_REPORT.md  api_reference.md  gemini_live_ws_connection.md  nerodivine_implementation.md  toys_websocket_api.md
frontend-client/: README.md  WEB_CLIENT_USAGE.md  audio-client.js  index.html  requirements.txt  serve_web_client.py  web_test_client.html  ws_test_client.py
scholar_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: a.test.py  test_toys_binary_ws.py
tests/: audio_ws_test.py  mic.py
(+31 files in other folders)
