[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scholar-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.3",
  "numpy>=1.26",
  "websockets>=11.0",
  "sqlalchemy>=2.0.0",
  "psycopg2-binary>=2.9.5",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "httpx>=0.27",
  "anyio>=4.0",
]
client = [
  "sounddevice>=0.4.6",
  "websockets>=11.0",
]

[tool.uvicorn]
factory = true
host = "0.0.0.0"
port = 8000
reload = true


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["dev*", "tests*", "scripts*"]
